--- a/about.html
+++ b/about.html
@@ -4,13 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Day </title>
+    <link rel="stylesheet" href="css/styles.css.about">
+    <title>About Page</title>
 </head>
 <body>
-<p> This is what this is all about! </p>
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, fugit assumenda! Laborum cupiditate et nam facilis ab facere, amet saepe provident eum quibusdam cumque deserunt magni tempore debitis dolor ex.
-    
-</p>
-    
+    <!--logo banner (red/yellow) for header-->
+    <header>
+        <a href="about.html"></a>
+        <h1><img src="./img/facebook - Red and Yellow.jpg" alt="banner logo" width="1300" height="350"></h1>
+    </header>
+<main>
+<br>
+<!--Vision section-->
+<head>
+    <h2><img src="./img/Shoulder-Back-Pose" alt="FitnessPic1" width="1300" height="400"></h2>
+</head>
+<br>
+    <ul>Vision
+        <li>Garuda Philosophy: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Goal: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Team: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    </ul>
+<br>
+<!--Methodology section-->
+<head>
+    <h3><img src="./img/Food1.jpg" alt="Foodpic1" width="1300" height="400"></h3>
+</head>
+    <ul>Methodology
+        <li>Prepacked Meals by Delivery: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Medical and Fitness goal aligned: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Consultation in macro-nutrient focused meal planning and prepping: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    </ul>
+  <br>
+  <!--FAQS - QA section-->
+  <head>
+    <h4><img src="./img/weightlifter" alt="FitnessPic3" width="1300" height="400"></h4>
+</head>
+  <ul>FAQS
+    <li>Q1: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>A1: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>Q2: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>A2: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>Q3: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>A3: Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+</ul>  
+<br>
+<!--Partners section-->
+<head>
+    <h5><img src="./img/Food2.jpg" alt="FoodPic2" width="1300" height="500"></h5>
+</head>
+<ul>Parnters
+    <li>Phoenix Fitness Grind, LLC:     Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>Fatherhood First, LLC:          Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+    <li>Private Public Solutions, LLC:  Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+</ul>
+<br>
+<!--Map Embed-->
+<head>
+    <h6><img src="./img/group exercise.jpg" alt="FitnessPic5" width="1300" height="400"></h6>
+
+</main>
 </body>
+</html>
+
+
+
