--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Day </title>
+    <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Contact Page </title>
 </head>
 <body>
-    <p>Keep on calling...</p>
-    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci omnis mollitia asperiores, amet error id quisquam rerum fugiat sit corporis consequuntur, doloremque pariatur quasi impedit est numquam enim eligendi a!</p>
-    
+    <!--logo banner (black/white) for header-->
+    <header>
+        <a href="contact.html"></a>
+        <h1><img src="./img/facebook- Black.jpg" alt="Logo Banner" width="1250" height="350"></h1>
+    </header>
 </body>
+<!--Form Embed-->
+<ul>Consultation Request Form
+<br>
+    <form action="/action_page.php" method="get">
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="email">Email:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="Phone">Phone:</label>
+        <input type="Phone" id="Phone" name="fname"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+</ul>
+    <head>
+        <h1><img src="./img/Food4.jpg" alt="FoodPicA" width="1350" height="400"></h1>
+    </head>
+<br>
+<!--Social Media Embeds-->
+<head>
+<br>
+  <div> Social Media
+<br>
+<!-- Add font awesome icons -->
+        <a href="https://www.facebook.com/profile.php?id=100063746642355" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/garudagrind" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/garudanutritiongrind/" class="fa fa-instagram"></a>
+<!--Video Embed-->
+<head>
+    <h3><img src="./img/Food5" alt="Food2" width="1300" height="400"></h3>
+</head>
+<head>
+    <h1>Garuda Nutrition Grind YouTube Channel</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uwlP748sKYk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </ul>
+</head>
+<br>
+<!--Map Embed-->
+<head>
+    <h3><img src="./img/group exercise.jpg" alt="FitnessPic3" width="1300" height="400"></h3>
+</head>
+    <h4>Location</h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.341254499324!2d-78.88137028442428!3d42.88674632915503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d3124bb580f115%3A0xe73f8e5fb8c3c90f!2sBuffalo%20City%20Hall!5e0!3m2!1sen!2sus!4v1659481513974!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+    
