--- a/index.html
+++ b/index.html
@@ -4,35 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--page fonts-->
     <link rel="stylesheet" href="css/styles.css">
-    <title>Day </title>
+    <link rel="preconnect" href="https://fontawesome.com/">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <title>Websites for Beginners Final Project - Garuda Nutrition Grind</title>
 </head>
+<!--main body of page-->
 <body>
-    <!--2-Columns-->
+<!--banner logo (purple/white)-->
+<header>
+    <a href="header pic"></a><h1><img src="./img/facebook - Purple.jpg" alt="Logo Banner" width="1250" height="350"><h1>
+</header>
+<!-- navigation bar tags/buttongs-->
+    <nav>
+        <ul>
+            <li><a class="menu-item" href="http://127.0.0.1:5500/index.html">Home</a></li>
+            <li> <a class="menu-item" href="http://127.0.0.1:5500/about.html">About</a></li>
+            <li><a class="menu-item" href="http://127.0.0.1:5500/menu.html">Menu</a></li>
+            <li><a class="menu-item" href="http://127.0.0.1:5500/contact.html">Contact</a></li>
+    </nav>
+<br>
+<!--hero pics-->  
+<ul>
+    <li><a href="meal pic1"></a><h1><img src="./img/Hero MP1.jpg" alt="Meal Pic1" width="250" height="260"></h1></li>
+    <li><a href="meal pic2"></a><h1><img src="./img/Hero MP2.jpg" alt="Meal Pic2" width="250" height="260"></h1></li>  
+    <li><a href="meal pic3"></a><h1><img src="./img/Hero MP3.jpg" alt="Meal Pic3" width="250" height="260"></h1></li>   
+    <li><a href="meal pic4"></a><h1><img src="./img/Hero MP4.jpg" alt="Meal Pic4" width="250" height="260"></h1></li>
+</ul>  
 <br>
     <div class="row">
-        <div class="column2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur harum, nemo enim autem aperiam nesciunt veniam, beatae ad in at dolore, non aut vero temporibus. Sit doloremque nulla inventore alias.</div>
-        <div class="column2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ipsa officia fugit. Optio rem excepturi molestiae totam? Optio, veritatis ducimus explicabo eveniet vel exercitationem corporis. Minima ducimus harum iusto fugiat.</div>
-    </div>
+        <div class="column2">Tailored pre-packaged meals to align with your health and fitness goals with the convinience of delivery right to your doorstep! </div>
     <div class="clearfix"></div>
-    <!--3-Columns-->
+<!--3-Columns-->
 <br>
     <div class="row">
-        <div class="column3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptatum quam nulla expedita placeat earum aperiam in commodi nihil, nisi sequi voluptate rem labore optio deleniti tempore sed, accusantium cupiditate?</div>
-        <div class="column3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus numquam ullam quia animi nisi, dolores tenetur asperiores distinctio hic vero excepturi odit! Error odit itaque reiciendis illo excepturi quas quam</div>
-        <div class="column3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, quo illum enim dolore ipsa numquam praesentium fugiat consequatur accusantium eos mollitia eaque voluptatem nulla pariatur illo nobis minus! Natus, repudiandae.</div>
-    </div>
+        <div class="column3">Macronutrient tailored meals!</div>
     <div class="clearfix"></div>
 <br>
-    <!--4-Columns-->
+<!--4-Columns-->
     <div class="row">
-        <div class="column4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptatum quam nulla expedita placeat earum aperiam in commodi nihil, nisi sequi voluptate rem labore optio deleniti tempore sed, accusantium cupiditate?</div>
-        <div class="column4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus numquam ullam quia animi nisi, dolores tenetur asperiores distinctio hic vero excepturi odit! Error odit itaque reiciendis illo excepturi quas quam</div>
-        <div class="column4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, quo illum enim dolore ipsa numquam praesentium fugiat consequatur accusantium eos mollitia eaque voluptatem nulla pariatur illo nobis minus! Natus, repudiandae.</div>
-        <div class="column4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, quo illum enim dolore ipsa numquam praesentium fugiat consequatur accusantium eos mollitia eaque voluptatem nulla pariatur illo nobis minus! Natus, repudiandae.</div>
-    </div>
-</body>
+    <div class="column4">Prepackaged Meals by delivery! Fitness aligned and tailor made for your specific health and fitness needs!</div>
+    <div class="clearfix"></div>
+<br>
+<footer>
 
+</footer>
+<br>
+<!--background music-->
+<h1>Background Music Controls</h1>
+    <audio controls autoplay muted>
+        <source src="audio/Hustlin' (Instrumental) - NEFFEX.mp3" type="audio/ogg">
+        <source src="audio/Hustlin' (Instrumental) - NEFFEX.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+<br>
 
+</body> 
 </html>
 
