--- a/about.html
+++ b/about.html
@@ -13,6 +13,14 @@
         <a href="about.html"></a>
         <h1><img src="./img/facebook - Red and Yellow.jpg" alt="banner logo" width="1300" height="350"></h1>
     </header>
+    <!-- navigation bar tags/buttongs-->
+    <nav>
+        <ul>
+            <li><a class="menu-item" href="index.html">Home</a></li>
+            <li> <a class="menu-item" href="about.html">About</a></li>
+            <li><a class="menu-item" href="menu.html">Menu</a></li>
+            <li><a class="menu-item" href="contact.html">Contact</a></li>
+    </nav>
 <main>
 <br>
 <!--Vision section-->
