--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,14 @@
         <a href="contact.html"></a>
         <h1><img src="./img/facebook- Black.jpg" alt="Logo Banner" width="1250" height="350"></h1>
     </header>
-</body>
+    <!-- navigation bar tags/buttongs-->
+    <nav>
+        <ul>
+            <li><a class="menu-item" href="index.html">Home</a></li>
+            <li> <a class="menu-item" href="about.html">About</a></li>
+            <li><a class="menu-item" href="menu.html">Menu</a></li>
+            <li><a class="menu-item" href="contact.html">Contact</a></li>
+    </nav>
 <!--Form Embed-->
 <ul>Consultation Request Form
 <br>
@@ -61,5 +68,6 @@
     <h4>Location</h4>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.341254499324!2d-78.88137028442428!3d42.88674632915503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d3124bb580f115%3A0xe73f8e5fb8c3c90f!2sBuffalo%20City%20Hall!5e0!3m2!1sen!2sus!4v1659481513974!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-
+</body>
+</html>
     
