--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <!-- navigation bar tags/buttongs-->
     <nav>
         <ul>
-            <li><a class="menu-item" href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li> <a class="menu-item" href="http://127.0.0.1:5500/about.html">About</a></li>
-            <li><a class="menu-item" href="http://127.0.0.1:5500/menu.html">Menu</a></li>
-            <li><a class="menu-item" href="http://127.0.0.1:5500/contact.html">Contact</a></li>
+            <li><a class="menu-item" href="index.html">Home</a></li>
+            <li> <a class="menu-item" href="about.html">About</a></li>
+            <li><a class="menu-item" href="menu.html">Menu</a></li>
+            <li><a class="menu-item" href="contact.html">Contact</a></li>
     </nav>
 <br>
 <!--hero pics-->  
